impl slice and thumbnail